--- a/app/src/main/res/layout/activity_detail_superhero.xml
+++ b/app/src/main/res/layout/activity_detail_superhero.xml
@@ -13,14 +13,15 @@
         android:scaleType="centerCrop"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="@string/nothing"/>
 
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:cardCornerRadius="22dp"
+        app:cardCornerRadius="42dp"
         android:elevation="8dp"
-        android:layout_marginTop="235dp"
+        android:layout_marginTop="225dp"
         app:cardBackgroundColor="@color/design_default_color_error"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
